fix z-index

--- a/static/css/markdown.css
+++ b/static/css/markdown.css
@@ -56,6 +56,7 @@ a:hover {
     margin: 10px 20px;
     position: fixed;
     max-width: 600px;
+    z-index: 1;
 }
 
 main, .publist {
